Service test refactory
